@@ -18,6 +18,9 @@ RELEASE NOTES
     Added support for the proprietary directive initialization/2 to the config
     files of SWI-Prolog and YAP.
 
+    Added support for the proprietary meta-predicates findall/4 and tfindall/3
+    to the XSB config file.
+
     Updated the library object "term" with a (hopefully) faster implementation
     of the predicate ground/1, following advise by Lindsey Spratt on the GNU
     Prolog mailing list.
